@@ -34,7 +34,7 @@ namespace RCT1
     uint8_t NormalisePathAddition(uint8_t pathAdditionType);
     uint8_t GetVehicleSubEntryIndex(uint8_t rct1VehicleType, uint8_t vehicleSubEntry);
 
-    std::string_view GetRideTypeObject(RideType rideType);
+    std::string_view GetRideTypeObject(RideType rideType, bool isLL);
     std::string_view GetVehicleObject(uint8_t vehicleType);
     std::string_view GetSmallSceneryObject(uint8_t smallSceneryType);
     std::string_view GetLargeSceneryObject(uint8_t largeSceneryType);
