@@ -1,5 +1,6 @@
 0.4.9 (in development)
 ------------------------------------------------------------------------
+- Fix: [#20907] RCT1/AA scenarios use the 4-across train for the Inverted Roller Coaster.
 
 0.4.8 (2024-02-04)
 ------------------------------------------------------------------------
